# rust-template

./: .env.docker  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yaml
migrations/2024-03-15-211338_create_posts/: up.sql
src/: lib.rs  main.rs  middleware.rs
src/controllers/: k8s.rs
src/controllers/k8s/: k8s.rs
src/database/: db.rs
src/database/models/: posts.rs  schema.rs
src/infrastructure/database/: db.rs
src/infrastructure/models/: posts.rs
