[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
