[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
uuid = {version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = "0.3.34"
chrono = "0.4.35"
